2005-04-11 Magnus Hagdorn
 * glint_global_interp.f90: real constants have to be double precision, changed
   masko==.false. to .not.masko
 * glint_example_clim.f90: initialise pointers to NULL(), dummy arguments which might be
   unassociated have to be pointers

2005-04-11 Ian Rutt
 * Added asynchronous coupling of mass-balance to ice model in glint

2005-04-05 Ian Rutt
 * New climate driver for glint_example.f90, called
   glint_example_clim.f90, now handles netcdf input files more flexibly.
 * Added error-handling code to glint_global_interp.f90
 * Added various operator overloadings to glint_global_grid.f90
	
2005-04-04 Magnus Hagdorn
 * glide_velo.f90: grr, used wrong derivatives for basal shear calcs,
   fixed

2005-04-04 Magnus Hagdorn
 * glide_thck.f90: move surface and horiz deriv calculations to
   thck_evolve
 * glide_types.f90: added basal shear stress variables
 * glide_vars.def: ditto
 * glide_velo.f90: added shear stress calculations
 * glide.f90: indicated where basal shear stress cals might go
 
2005-03-24 Ian Rutt
 * Changed glint_global_interp to use global grid types to define
   input and output grids
 * Changed glint_example ncdf handling code to use global grid types
 * Changed glint_global_interp to real(rk)
 * Generally simplified glint_example and tidied it up
	
2005-03-23 Ian Rutt
 * Extended length of variables used to construct log messages to 150
   chars
 * Fixed problem with single-precision compilation
 * Converted awi.f to f90 (glint_global_interp.f90) - needs a bit more
   work, but functions correctly.
	
2005-03-17 Ian Rutt
 * Removed printing of ierr after calling awi.f
 * Released at version 0.5.1

2005-03-16 Ian Rutt
 * Added some dodgy f77 interpolation code (awi.f) to deal with problems I
 had with different global grids in NCEP data used to force
 glint_example. It is my aim to convert this to f90 soon.
 * Changed glint_example to deal with new precip data

2005-03-14 Ian Rutt